# villa-romanza

./: .gitignore  pytest.ini  run_all_tests.sh
.claude/: CLAUDE.md
crestron-mcp/: crestron_mcp.py
docs/: MEMORY.md  av_integration_playbook.md  fixed_ip_reservations.md  network_migration_plan.md  network_plan.md  security_vlan.md  system_constitution.md
sonos-mcp/: .env.example  pyproject.toml
sonos-mcp/src/sonos_mcp/: __init__.py  config.py  discovery.py  helpers.py  resolver.py  server.py
sonos-mcp/src/sonos_mcp/generative/: base.py  mubert.py  musicgen.py
sonos-mcp/src/sonos_mcp/integrations/: crestron.py  home_assistant.py
sonos-mcp/src/sonos_mcp/music/: amazon_music.py  base.py  favorites.py  tunein.py
sonos-mcp/src/sonos_mcp/tools/: __init__.py  discovery.py  favorites.py  grouping.py  playback.py  queue.py  resolve.py  villa.py  volume.py  zones.py
sonos-mcp/tests/: conftest.py  test_config.py  test_helpers.py  test_resolver.py  test_safety_gates.py
tests/: conftest.py  test_system_health.py
unifi-tools/: .env.example  dhcp_force_renew.py
unifi-tools/tests/: conftest.py  test_reservations.py
