[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonos-mcp"
version = "0.1.0"
description = "Villa Romanza Sonos MCP Server — AI-driven multi-room audio control"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "soco>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sonos_mcp"]
